2003-11-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b22

	* Fix from Bharat to reduce time limit errors in large galleries.

2003-11-17 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b21

        * Bigfix: Changed check in confirm.inc to
          catch empty fields which are new.

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b20

	* Fixed bug where focus on new password page was an uneditable field.

	* Re-arranged email message slightly, so links are clickable.

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b19

	* Added message if you run backup_albums.php from setup directory.

	* Added message in config that slide show improvements don't 
	  work for low tech version.

2003-11-15  Jesse Mullan  <jmullan@visi.com> 1.4.2-cvs-b18

	* Fixed php short tag to long tag in html_wrap/gallery.footer.default

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b17

	* Removed error message so skins/ can be removed without problems.

2003-11-14  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b16

	* Updated gallery_remote2.php to tweak fetch-album-images and
	  fetch-albums*, adding some data that GR needs.
	* Also added some trivial debugging.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b15

	* Added backwards compatibility for user customized thumbnail frames.

	* check_versions more verbose, and translatable.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b14

	* Tidy up of validation link. Note this is not the  same as the change 
	  made in 1.4.1-RC4-b9.

2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b13

	* Moved email.log to .users directory.

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b12

	* Ignore config_version when running backup script.

2003-11-13 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b11

	* Bugfix: Fixed wrong style.

	* Change: Fix Typo.
	
	* Change: Doctype is now more detailed.
