@@ -2,13 +2,9 @@
 <?php 
 
 	$GALLERY_BASEDIR="../";
-	require($GALLERY_BASEDIR . 'util.php');
 	require($GALLERY_BASEDIR . 'setup/init.php');
 	require($GALLERY_BASEDIR . 'setup/functions.inc');
-	initLanguage();
 
-	// We set this to false to get the config stylesheet
-	$GALLERY_OK=false;
 ?>
 <html>
 <head>
@@ -204,7 +200,7 @@ function checkImageMagick($cmd) {
 		}
 	}
 
-	$cmd .= " --version";
+	$cmd .= " -version";
 	
 	fs_exec($cmd, $results, $status, $debugfile);
 
