@@ -2,21 +2,7 @@
 <?php 
 
 	$GALLERY_BASEDIR="../";
-	require($GALLERY_BASEDIR . "util.php");
 	require($GALLERY_BASEDIR . "setup/init.php");
-
-	initLanguage();
-	if (getOS() == OS_WINDOWS) {
-		include($GALLERY_BASEDIR . "platform/fs_win32.php");
-		if (fs_file_exists("SECURE")) {
-			print _("You cannot access this file while gallery is in secure mode.");
-			exit;
-		}
-	}
-
-	// We set this to false to get the config stylesheet
-        $GALLERY_OK=false;
-	extract($HTTP_POST_VARS);
 	require($GALLERY_BASEDIR . "setup/functions.inc");
 ?>
 
