@@ -1,22 +1,11 @@
 <?php /* $Id$ */ ?>
 <?php 
 
-$GALLERY_BASEDIR="../";
-require($GALLERY_BASEDIR . "util.php");
-require('./init.php');
-require('./functions.inc');
-@include($GALLERY_BASEDIR . "config.php"); 
-$GALLERY_OK = false;
+	$GALLERY_BASEDIR="../";
 
-if (getOS() == OS_WINDOWS) {
-    include($GALLERY_BASEDIR . "platform/fs_win32.php");
-    if (fs_file_exists("SECURE")) {
-       print "You cannot access this file while gallery is in secure mode.";
-       exit;
-    }
-}
-
-initLanguage();
+	@include($GALLERY_BASEDIR . "config.php"); 
+	require($GALLERY_BASEDIR . 'setup/init.php');
+	require($GALLERY_BASEDIR . 'setup/functions.inc');
 ?>
 <html>
 <head>
