@@ -1,24 +1,12 @@
 <?php /* $Id$ */ ?>
 <?php 
 
-$GALLERY_BASEDIR = '../';
+	$GALLERY_BASEDIR = '../';
 
-require ($GALLERY_BASEDIR . 'util.php');
-require ('./init.php');
-require ('./functions.inc');
-require ($GALLERY_BASEDIR . 'Version.php');
-if (fs_file_exists($GALLERY_BASEDIR . "config.php")) {
-	// There may be warnings generated by earlier versions of config.php
 	@include($GALLERY_BASEDIR . "config.php");
-}
-if (isset($gallery->app->devMode) && $gallery->app->devMode == "yes") {
-       	error_reporting(E_ALL);
-} else {
-       	error_reporting(E_ALL & ~E_NOTICE);
-}
-$GALLERY_OK=false;
-initLanguage();
-
+	require ($GALLERY_BASEDIR . 'setup/init.php');
+	require ($GALLERY_BASEDIR . 'setup/functions.inc');
+	require ($GALLERY_BASEDIR . 'Version.php');
 ?>
 <html>
 <head>
@@ -42,7 +30,7 @@ if (function_exists("posix_getpwuid")) {
 	}
 }
 
-require("./config_data.inc");
+require($GALLERY_BASEDIR . 'setup/config_data.inc');
 
 if (isset ($go_defaults)) {
 	$setup_page = $this_page;
