@@ -1,3 +1,11 @@
+2003-11-18 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b23
+
+	* Change: Code cleanup in setup files. Moved initialization things into
+		  init.php.
+
+	  Note: This also fixes a Bug where fs_win32.php was loaded when in win32.
+		This also fixes a Bug when PHP has no gettext and diagnostics were called.
+
 2003-11-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b22
 
 	* Fix from Bharat to reduce time limit errors in large galleries.
